--- a/src/Wellcome.Dds/DlcsWebClient/DlcsWebClient.csproj
+++ b/src/Wellcome.Dds/DlcsWebClient/DlcsWebClient.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Wellcome.Dds.AssetDomain\Wellcome.Dds.AssetDomain.csproj" />
+    <ProjectReference Include="..\Wellcome.Dds.Common\Wellcome.Dds.Common.csproj" />
   </ItemGroup>
 
 </Project>
