--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Properties/launchSettings.json
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Properties/launchSettings.json
@@ -1,9 +1,9 @@
-﻿{
+{
   "iisSettings": {
-    "windowsAuthentication": false, 
-    "anonymousAuthentication": true, 
+    "windowsAuthentication": false,
+    "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:15719",
+      "applicationUrl": "http://localhost:8085",
       "sslPort": 0
     }
   },
@@ -18,10 +18,10 @@
     "Wellcome.Dds.Dashboard": {
       "commandName": "Project",
       "launchBrowser": true,
-      "applicationUrl": "http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "applicationUrl": "http://localhost:5000"
     }
   }
 }
