Add AzureAd and health check
WiP - commented out access code in controller

--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/appsettings.Development.Example.json
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/appsettings.Development.Example.json
@@ -44,5 +44,12 @@
     "PreferCachedStorageMap": false,
     "GoobiCall": "DO NOT CALL",
     "dash-body-inject": " style=background-image:url(/content/staging.png); background-repeat;"
+  },
+  "AzureAd": {
+    "Instance": "https://login.microsoftonline.com/",
+    "Domain": "xxxxx",
+    "TenantId": "xxxxx",
+    "ClientId": "xxxxx",
+    "CallbackPath": "/signin-oidc"
   }
 }
