--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/appsettings.json
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/appsettings.json
@@ -16,7 +16,7 @@
       }
     ],
     "Properties": {
-      "ApplicationName": "Engine"
+      "ApplicationName": "Dds-Dashboard"
     }
   },
   "AllowedHosts": "*"
