Create Utils.Aws project

--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Wellcome.Dds.Dashboard.csproj
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Wellcome.Dds.Dashboard.csproj
@@ -16,6 +16,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\DlcsWebClient\DlcsWebClient.csproj" />
+    <ProjectReference Include="..\Utils.Aws\Utils.Aws.csproj" />
     <ProjectReference Include="..\Wellcome.Dds.AssetDomainRepositories\Wellcome.Dds.AssetDomainRepositories.csproj" />
   </ItemGroup>
 
