--- a/src/Wellcome.Dds/WorkflowProcessor/Properties/launchSettings.json
+++ b/src/Wellcome.Dds/WorkflowProcessor/Properties/launchSettings.json
@@ -1,11 +1,12 @@
 {
   "profiles": {
-    "DlcsJobProcessor": {
+    "WorkflowProcessor": {
       "commandName": "Project",
+      "launchBrowser": false,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "http://localhost:8082"
+      "applicationUrl": "http://localhost:8081"
     }
   }
 }
