Respond to donaldgray's comments; asyncThreadLock

--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/appsettings.Staging.json
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/appsettings.Staging.json
@@ -32,7 +32,7 @@
         "ManifestTemplate": "https://wellcomelibrary.org/iiif/{0}/manifest",
         "AvoidCaching": true,
         "EarliestJobDateTime": "2016-07-07",
-        "MinimumJobAgeMinutes": 0,
+        "MinimumJobAgeMinutes": 0
     },
     "Storage-Production": {
         "StorageApiTemplate": "https://api.wellcomecollection.org/storage/v1/bags/digitised/{0}",
@@ -43,6 +43,16 @@
         "MemoryCacheSeconds": 3600,
         "PreferCachedStorageMap": false,
         "MaxAgeStorageMap": 0
+    },
+    "BinaryObjectCache": {
+        "StorageMaps": {
+            "AvoidCaching": false,
+            "AvoidSaving": false,
+            "WriteFailThrowsException": true,
+            "Folder": "wellcomecollection-stage-iiif-storagemaps",
+            "Prefix": "stgmap-",
+            "MemoryCacheSeconds": 60
+        }
     },
     "AzureAd": {
         "Instance": "https://login.microsoftonline.com/",
