change directory/bucket abstraction name to Container

--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/appsettings.Staging.json
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/appsettings.Staging.json
@@ -49,7 +49,7 @@
             "AvoidCaching": false,
             "AvoidSaving": false,
             "WriteFailThrowsException": true,
-            "Folder": "wellcomecollection-stage-iiif-storagemaps",
+            "Container": "wellcomecollection-stage-iiif-storagemaps",
             "Prefix": "stgmap-",
             "MemoryCacheSeconds": 60
         }
