wip on DashCOntroller

--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Wellcome.Dds.Dashboard.csproj
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Wellcome.Dds.Dashboard.csproj
@@ -22,6 +22,8 @@
     <ProjectReference Include="..\DlcsWebClient\DlcsWebClient.csproj" />
     <ProjectReference Include="..\Utils.Aws\Utils.Aws.csproj" />
     <ProjectReference Include="..\Wellcome.Dds.AssetDomainRepositories\Wellcome.Dds.AssetDomainRepositories.csproj" />
+    <ProjectReference Include="..\Wellcome.Dds.Data\Wellcome.Dds.Data.csproj" />
+    <ProjectReference Include="..\Wellcome.Dds\Wellcome.Dds.csproj" />
   </ItemGroup>
 
  </Project>
