Update dockerfile-dashboard to include new projects

--- a/Dockerfile-dashboard
+++ b/Dockerfile-dashboard
@@ -6,6 +6,9 @@ COPY src/Wellcome.Dds/DlcsWebClient/DlcsWebClient.csproj DlcsWebClient/
 COPY src/Wellcome.Dds/Wellcome.Dds.AssetDomainRepositories/Wellcome.Dds.AssetDomainRepositories.csproj Wellcome.Dds.AssetDomainRepositories/
 COPY src/Wellcome.Dds/Wellcome.Dds.AssetDomain/Wellcome.Dds.AssetDomain.csproj Wellcome.Dds.AssetDomain/
 COPY src/Wellcome.Dds/Wellcome.Dds.Common/Wellcome.Dds.Common.csproj Wellcome.Dds.Common/
+COPY src/Wellcome.Dds/Wellcome.Dds.Data/Wellcome.Dds.Data.csproj Wellcome.Dds.Data/
+COPY src/Wellcome.Dds/Wellcome.Dds/Wellcome.Dds.csproj Wellcome.Dds/
+COPY src/Wellcome.Dds/Wellcome.Dds.Repositories/Wellcome.Dds.Repositories.csproj Wellcome.Dds.Repositories/
 COPY src/Wellcome.Dds/Utils/Utils.csproj Utils/
 COPY src/Wellcome.Dds/Utils.Aws/Utils.Aws.csproj Utils.Aws/
 COPY src/Wellcome.Dds/Utils.Tests/Utils.Tests.csproj Utils.Tests/
