partially eliminate sequenceIndex - requires new PDF query in DLCS

--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/appsettings.Staging.json
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/appsettings.Staging.json
@@ -22,7 +22,9 @@
     "BatchSize": 100,
     "PortalPageTemplate": "https://portal.dlcs.io/Image.aspx?space={0}&image={1}",
     "PortalBatchTemplate": "https://portal.dlcs.io/Batch.aspx?batch={0}",
-    "PreventSynchronisation": false
+    "PreventSynchronisation": false,
+    "PdfQueryName": "pdf-item",
+    "PdfQueryType": "sequenceIndex"
   },
   "Dds": {
     "StatusContainer": "wellcomecollection-stage-iiif-presentation",
@@ -49,9 +51,8 @@
         "Scope": "https://api.wellcomecollection.org/storage/v1/bags",
         "StorageApiTemplateIngest": "https://api.wellcomecollection.org/storage/v1/ingests",
         "ScopeIngest": "https://api.wellcomecollection.org/storage/v1/ingests",
-        "MemoryCacheSeconds": 3600,
         "PreferCachedStorageMap": false,
-        "MaxAgeStorageMap": 60
+        "MaxAgeStorageMap": 180
     },
     "BinaryObjectCache": {
       "StorageMaps": {
@@ -60,7 +61,7 @@
         "WriteFailThrowsException": true,
         "Container": "wellcomecollection-stage-iiif-storagemaps",
         "Prefix": "stgmap-",
-        "MemoryCacheSeconds": 60
+        "MemoryCacheSeconds": 180
       }
     },
     "AzureAd": {
