--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/appsettings.Production.json
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/appsettings.Production.json
@@ -11,7 +11,19 @@
             {
                 "Name": "Console"
             }
-        ]
+        ],
+        "Properties": {
+            "Environment": "Staging"
+        }
+    },
+    "Storage": {
+        "StorageApiTemplate": "https://api.wellcomecollection.org/storage/v1/bags/digitised/{0}",
+        "TokenEndPoint": "https://auth.wellcomecollection.org/oauth2/token",
+        "Scope": "https://api.wellcomecollection.org/storage/v1/bags",
+        "StorageApiTemplateIngest": "https://api.wellcomecollection.org/storage/v1/ingests",
+        "ScopeIngest": "https://api.wellcomecollection.org/storage/v1/ingests",
+        "PreferCachedStorageMap": false,
+        "MaxAgeStorageMap": 180
     },
     "AzureAd": {
         "Instance": "https://login.microsoftonline.com/",
