--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/appsettings.Staging.json
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/appsettings.Staging.json
@@ -1,18 +1,21 @@
 ﻿{
-    "Serilog": {
-        "MinimumLevel": {
-            "Default": "Debug",
-            "Override": {
-                "Microsoft": "Warning",
-                "System": "Warning"
-            }
-        },
-        "WriteTo": [
-            {
-                "Name": "Console"
-            }
-        ]
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Debug",
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
     },
+    "WriteTo": [
+      {
+        "Name": "Console"
+      }
+    ],
+    "Properties": {
+      "Environment": "Staging"
+    }
+  },
   "Dlcs": {
     "CustomerId": 2,
     "CustomerName": "Wellcome",
@@ -45,28 +48,28 @@
     "DashBodyInject": "background-image:url(/img/staging.png); background-repeat;",
     "GoobiCall": "DO NOT CALL"
   },
-    "Storage-Production": {
-        "StorageApiTemplate": "https://api.wellcomecollection.org/storage/v1/bags/digitised/{0}",
-        "TokenEndPoint": "https://auth.wellcomecollection.org/oauth2/token",
-        "Scope": "https://api.wellcomecollection.org/storage/v1/bags",
-        "StorageApiTemplateIngest": "https://api.wellcomecollection.org/storage/v1/ingests",
-        "ScopeIngest": "https://api.wellcomecollection.org/storage/v1/ingests",
-        "PreferCachedStorageMap": false,
-        "MaxAgeStorageMap": 180
-    },
-    "BinaryObjectCache": {
-      "StorageMaps": {
-        "AvoidCaching": false,
-        "AvoidSaving": false,
-        "WriteFailThrowsException": true,
-        "Container": "wellcomecollection-stage-iiif-storagemaps",
-        "Prefix": "stgmap-",
-        "MemoryCacheSeconds": 180
-      }
-    },
-    "AzureAd": {
-        "Instance": "https://login.microsoftonline.com/",
-        "Domain": "wellcomecloud.onmicrosoft.com",
-        "CallbackPath": "/signin-oidc"
+  "Storage": {
+    "StorageApiTemplate": "https://api-stage.wellcomecollection.org/storage/v1/bags/digitised/{0}",
+    "TokenEndPoint": "https://auth.wellcomecollection.org/oauth2/token",
+    "Scope": "https://api.wellcomecollection.org/storage/v1/bags",
+    "StorageApiTemplateIngest": "https://api-stage.wellcomecollection.org/storage/v1/ingests",
+    "ScopeIngest": "https://api.wellcomecollection.org/storage/v1/ingests",
+    "PreferCachedStorageMap": false,
+    "MaxAgeStorageMap": 180
+  },
+  "BinaryObjectCache": {
+    "StorageMaps": {
+      "AvoidCaching": false,
+      "AvoidSaving": false,
+      "WriteFailThrowsException": true,
+      "Container": "wellcomecollection-stage-iiif-storagemaps",
+      "Prefix": "stgmap-",
+      "MemoryCacheSeconds": 180
     }
+  },
+  "AzureAd": {
+    "Instance": "https://login.microsoftonline.com/",
+    "Domain": "wellcomecloud.onmicrosoft.com",
+    "CallbackPath": "/signin-oidc"
+  }
 }
