--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/appsettings.Production.json
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/appsettings.Production.json
@@ -13,7 +13,7 @@
             }
         ],
         "Properties": {
-            "Environment": "Staging"
+            "Environment": "Production"
         }
     },
     "Storage": {
