Add workflowprocessor impl

--- a/src/Wellcome.Dds/WorkflowProcessor/appsettings.json
+++ b/src/Wellcome.Dds/WorkflowProcessor/appsettings.json
@@ -19,5 +19,12 @@
       "ApplicationName": "Workflow-Processor"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "WorkflowProcessor": {
+    "RegisterImages" : true,
+    "RefreshFlatManifestations" : false,
+    "RebuildPackageCaches" : false,
+    "RebuildTextCaches" : false,
+    "RebuildAllAnnoPageCaches" : false
+  }
 }
