Fix dependency issues with workflowProcessor

--- a/Dockerfile-iiifbuilder
+++ b/Dockerfile-iiifbuilder
@@ -20,7 +20,7 @@ RUN dotnet build "Wellcome.Dds.Server.csproj" -c Release
 
 FROM build AS testrunner
 WORKDIR "/src"
-RUN dotnet test "Utils.Tests/Utils.Tests.csproj" --filter Category=Database
+RUN dotnet test "Wellcome.Dds.sln" --filter Category\!=Database
 
 FROM build AS publish
 WORKDIR "/src/Wellcome.Dds.Server"
