--- a/Dockerfile-workflowprocessor
+++ b/Dockerfile-workflowprocessor
@@ -2,13 +2,24 @@ FROM mcr.microsoft.com/dotnet/core/sdk:3.1-buster AS build
 WORKDIR /src
 
 COPY src/Wellcome.Dds/WorkflowProcessor/WorkflowProcessor.csproj WorkflowProcessor/
+COPY src/Wellcome.Dds/Wellcome.Dds.AssetDomainRepositories/Wellcome.Dds.AssetDomainRepositories.csproj Wellcome.Dds.AssetDomainRepositories/
+COPY src/Wellcome.Dds/Utils/Utils.csproj Utils/
+COPY src/Wellcome.Dds/Utils.Aws/Utils.Aws.csproj Utils.Aws/
+COPY src/Wellcome.Dds/Wellcome.Dds.AssetDomain/Wellcome.Dds.AssetDomain.csproj Wellcome.Dds.AssetDomain/
+COPY src/Wellcome.Dds/Wellcome.Dds.Common/Wellcome.Dds.Common.csproj Wellcome.Dds.Common/
 
+COPY src/Wellcome.Dds/Utils.Tests/Utils.Tests.csproj Utils.Tests/
+COPY src/Wellcome.Dds/Wellcome.Dds.AssetDomainRepositories.Tests/Wellcome.Dds.AssetDomainRepositories.Tests.csproj Wellcome.Dds.AssetDomainRepositories.Tests/
 RUN dotnet restore "WorkflowProcessor/WorkflowProcessor.csproj"
 
 # Copy everything else
 COPY src/Wellcome.Dds/ ./
 WORKDIR "/src/WorkflowProcessor"
 RUN dotnet build "WorkflowProcessor.csproj" -c Release
+
+FROM build AS testrunner
+WORKDIR "/src"
+RUN dotnet test "Wellcome.Dds.sln" --filter Category\!=Database
 
 FROM build AS publish
 WORKDIR "/src/WorkflowProcessor"
