--- a/src/Wellcome.Dds/Utils.Aws/Utils.Aws.csproj
+++ b/src/Wellcome.Dds/Utils.Aws/Utils.Aws.csproj
@@ -9,7 +9,9 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="AWSSDK.Extensions.NETCore.Setup" Version="3.3.101" />
       <PackageReference Include="AWSSDK.S3" Version="3.3.111.20" />
+      <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="3.1.6" />
     </ItemGroup>
 
 </Project>
