--- a/src/Wellcome.Dds/DlcsJobProcessor/appsettings.json
+++ b/src/Wellcome.Dds/DlcsJobProcessor/appsettings.json
@@ -16,8 +16,13 @@
       }
     ],
     "Properties": {
-      "ApplicationName": "Engine"
+      "ApplicationName": "DlcsJob-Processor"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JobProcessor": {
+    "YieldTimeSecs": 60,
+    "Filter": "",
+    "Mode": "processqueue"
+  }
 }
