--- a/src/Wellcome.Dds/DlcsJobProcessor/DlcsJobProcessor.csproj
+++ b/src/Wellcome.Dds/DlcsJobProcessor/DlcsJobProcessor.csproj
@@ -5,6 +5,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AWSSDK.SecurityToken" Version="3.3.105.29" />
+    <PackageReference Include="EFCore.NamingConventions" Version="1.1.0" />
+    <PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks.EntityFrameworkCore" Version="3.1.5" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="3.1.5" />
     <PackageReference Include="Serilog.AspNetCore" Version="3.2.0" />
     <PackageReference Include="Serilog.Sinks.Seq" Version="4.0.0" />
@@ -12,6 +15,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\DlcsWebClient\DlcsWebClient.csproj" />
+    <ProjectReference Include="..\Wellcome.Dds.AssetDomainRepositories\Wellcome.Dds.AssetDomainRepositories.csproj" />
   </ItemGroup>
 
 </Project>
