Various small fixes prior to opening PR

--- a/src/Wellcome.Dds/WorkflowProcessor/appsettings.json
+++ b/src/Wellcome.Dds/WorkflowProcessor/appsettings.json
@@ -16,7 +16,8 @@
       }
     ],
     "Properties": {
-      "ApplicationName": "Workflow-Processor"
+      "ApplicationName": "Workflow-Processor",
+      "Environment": "Staging-Prod"
     }
   },
   "AllowedHosts": "*",
