--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/appsettings.json
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/appsettings.json
@@ -6,8 +6,8 @@
     "MinimumLevel": {
       "Default": "Debug",
       "Override": {
-        "Microsoft": "Debug",
-        "System": "Debug"
+        "Microsoft": "Warning",
+        "System": "Warning"
       }
     },
     "WriteTo": [
