Various small tweaks from stepping through

--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Properties/launchSettings.json
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Properties/launchSettings.json
@@ -17,7 +17,7 @@
     },
     "Wellcome.Dds.Dashboard": {
       "commandName": "Project",
-      "launchBrowser": true,
+      "launchBrowser": false,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
