add dash path to staging background graphic

--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/appsettings.Staging-Prod.json
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/appsettings.Staging-Prod.json
@@ -45,7 +45,7 @@
         "CacheBuster": "TODO - may not need these but if we do it's an object { }",
         "JobProcessorLog": "<firelens equivalent of> DlcsJobProcessor-ProcessQueue.log",
         "WorkflowProcessorLog": "<firelens equivalent of> WorkflowProcessor.log",
-        "DashBodyInject": "background-image:url(/img/staging.png); background-repeat;",
+        "DashBodyInject": "background-image:url(/dash/img/staging.png); background-repeat;",
         "GoobiCall": "DO NOT CALL"
     },
     "Storage": {
