Add production appsettings

--- a/src/Wellcome.Dds/WorkflowProcessor/appsettings.Production.json
+++ b/src/Wellcome.Dds/WorkflowProcessor/appsettings.Production.json
@@ -13,22 +13,9 @@
             }
         ],
         "Properties": {
-            "ApplicationName": "Dashboard",
+            "ApplicationName": "Workflow-Processor",
             "Environment": "Production"
         }
-    },
-    "Dlcs": {
-        "CustomerId": 2,
-        "CustomerName": "Wellcome",
-        "CustomerDefaultSpace": 5,
-        "ApiEntryPoint": "https://api.dlcs.io/",
-        "ResourceEntryPoint": "https://dlcs.io/",
-        "BatchSize": 100,
-        "PortalPageTemplate": "https://portal.dlcs.io/Image.aspx?space={0}&image={1}",
-        "PortalBatchTemplate": "https://portal.dlcs.io/Batch.aspx?batch={0}",
-        "PreventSynchronisation": false,
-        "PdfQueryName": "pdf-item",
-        "PdfQueryType": "sequenceIndex"
     },
     "Storage": {
         "StorageApiTemplate": "https://api.wellcomecollection.org/storage/v1/bags/digitised/{0}",
@@ -48,10 +35,5 @@
             "Prefix": "map-",
             "MemoryCacheSeconds": 180
         }
-    },
-    "AzureAd": {
-        "Instance": "https://login.microsoftonline.com/",
-        "Domain": "wellcomecloud.onmicrosoft.com",
-        "CallbackPath": "/signin-oidc"
     }
 }
