--- a/src/Wellcome.Dds/DlcsJobProcessor/appsettings.Production.json
+++ b/src/Wellcome.Dds/DlcsJobProcessor/appsettings.Production.json
@@ -13,7 +13,7 @@
             }
         ],
         "Properties": {
-            "ApplicationName": "Dashboard",
+            "ApplicationName": "Job-Processor",
             "Environment": "Production"
         }
     },
@@ -29,6 +29,25 @@
         "PreventSynchronisation": false,
         "PdfQueryName": "pdf-item",
         "PdfQueryType": "sequenceIndex"
+    },
+    "Dds": {
+        "StatusContainer": "wellcomecollection-stage-iiif-presentation",
+        "GoFile": "_status/dds.txt",
+        "StatusProviderHeartbeat": "_status/jobprocessor.txt",
+        "StatusProviderLogSpecialFile": "_status/_jobprocessor-diagnostics/",
+        "PersistentPlayerUri": "https://wellcomelibrary.org/player/{0}",
+        "PersistentCatalogueRecord": "https://search.wellcomelibrary.org/iii/encore/record/C__R{0}",
+        "EncoreBibliographicData": "https://search.wellcomelibrary.org/iii/queryapi/collection/bib/{0}?profiles=b(full)i(brief)&amp;format=xml",
+        "LinkedDataDomain": "https://wellcomelibrary.org",
+        "ManifestTemplate": "https://wellcomelibrary.org/iiif/{0}/manifest",
+        "AvoidCaching": false,
+        "EarliestJobDateTime": "2016-07-07",
+        "MinimumJobAgeMinutes": 0,
+        "CacheBuster": "TODO - may not need these but if we do it's an object { }",
+        "JobProcessorLog": "<firelens equivalent of> DlcsJobProcessor-ProcessQueue.log",
+        "WorkflowProcessorLog": "<firelens equivalent of> WorkflowProcessor.log",
+        "DashBodyInject": "background-image:url(/img/staging.png); background-repeat;",
+        "GoobiCall": "DO NOT CALL"
     },
     "Storage": {
         "StorageApiTemplate": "https://api.wellcomecollection.org/storage/v1/bags/digitised/{0}",
@@ -48,10 +67,5 @@
             "Prefix": "map-",
             "MemoryCacheSeconds": 180
         }
-    },
-    "AzureAd": {
-        "Instance": "https://login.microsoftonline.com/",
-        "Domain": "wellcomecloud.onmicrosoft.com",
-        "CallbackPath": "/signin-oidc"
     }
 }
