Update prod appsettings

--- a/src/Wellcome.Dds/DlcsJobProcessor/appsettings.Production.json
+++ b/src/Wellcome.Dds/DlcsJobProcessor/appsettings.Production.json
@@ -31,7 +31,7 @@
         "PdfQueryType": "sequenceIndex"
     },
     "Dds": {
-        "StatusContainer": "wellcomecollection-stage-iiif-presentation",
+        "StatusContainer": "wellcomecollection-iiif-presentation",
         "GoFile": "_status/dds.txt",
         "StatusProviderHeartbeat": "_status/jobprocessor.txt",
         "StatusProviderLogSpecialFile": "_status/_jobprocessor-diagnostics/",
@@ -46,7 +46,7 @@
         "CacheBuster": "TODO - may not need these but if we do it's an object { }",
         "JobProcessorLog": "<firelens equivalent of> DlcsJobProcessor-ProcessQueue.log",
         "WorkflowProcessorLog": "<firelens equivalent of> WorkflowProcessor.log",
-        "DashBodyInject": "background-image:url(/img/staging.png); background-repeat;",
+        "DashBodyInject": "background-image:url(/dash/img/staging.png); background-repeat;",
         "GoobiCall": "DO NOT CALL"
     },
     "Storage": {
