--- a/src/Wellcome.Dds/DlcsJobProcessor/appsettings.Staging.json
+++ b/src/Wellcome.Dds/DlcsJobProcessor/appsettings.Staging.json
@@ -26,6 +26,7 @@
     "BatchSize": 100,
     "PortalPageTemplate": "https://portal.dlcs.io/Image.aspx?space={0}&image={1}",
     "PortalBatchTemplate": "https://portal.dlcs.io/Batch.aspx?batch={0}",
+    "SkeletonNamedQueryTemplate": "https://dlcs.io/iiif-resource/wellcome/preview/{0}/{1}",
     "PreventSynchronisation": false,
     "PdfQueryName": "pdf-item",
     "PdfQueryType": "sequenceIndex"
