--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/appsettings.Staging-Prod.json
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/appsettings.Staging-Prod.json
@@ -32,9 +32,9 @@
     },
     "Dds": {
         "StatusContainer": "wellcomecollection-stage-iiif-presentation",
-        "GoFile": "_status/dds.txt",
-        "StatusProviderHeartbeat": "_status/jobprocessor.txt",
-        "StatusProviderLogSpecialFile": "_status/_jobprocessor-diagnostics/",
+        "GoFile": "_status/dds-test.txt",
+        "StatusProviderHeartbeat": "_status/jobprocessor-test.txt",
+        "StatusProviderLogSpecialFile": "_status/_jobprocessor-diagnostics-test/",
         "PersistentPlayerUri": "https://wellcomelibrary.org/player/{0}",
         "PersistentCatalogueRecord": "https://search.wellcomelibrary.org/iii/encore/record/C__R{0}",
         "EncoreBibliographicData": "https://search.wellcomelibrary.org/iii/queryapi/collection/bib/{0}?profiles=b(full)i(brief)&amp;format=xml",
