--- a/src/Wellcome.Dds/WorkflowProcessor/appsettings.Production.json
+++ b/src/Wellcome.Dds/WorkflowProcessor/appsettings.Production.json
@@ -17,6 +17,25 @@
             "Environment": "Production"
         }
     },
+    "Dds": {
+        "StatusContainer": "wellcomecollection-iiif-presentation",
+        "GoFile": "_status/dds.txt",
+        "StatusProviderHeartbeat": "_status/jobprocessor.txt",
+        "StatusProviderLogSpecialFile": "_status/_jobprocessor-diagnostics/",
+        "PersistentPlayerUri": "https://wellcomelibrary.org/player/{0}",
+        "PersistentCatalogueRecord": "https://search.wellcomelibrary.org/iii/encore/record/C__R{0}",
+        "EncoreBibliographicData": "https://search.wellcomelibrary.org/iii/queryapi/collection/bib/{0}?profiles=b(full)i(brief)&amp;format=xml",
+        "LinkedDataDomain": "https://wellcomelibrary.org",
+        "ManifestTemplate": "https://wellcomelibrary.org/iiif/{0}/manifest",
+        "AvoidCaching": false,
+        "EarliestJobDateTime": "2016-07-07",
+        "MinimumJobAgeMinutes": 0,
+        "CacheBuster": "TODO - may not need these but if we do it's an object { }",
+        "JobProcessorLog": "<firelens equivalent of> DlcsJobProcessor-ProcessQueue.log",
+        "WorkflowProcessorLog": "<firelens equivalent of> WorkflowProcessor.log",
+        "DashBodyInject": "background-image:url(/dash/img/staging.png); background-repeat;",
+        "GoobiCall": "DO NOT CALL"
+    },
     "Storage": {
         "StorageApiTemplate": "https://api.wellcomecollection.org/storage/v1/bags/digitised/{0}",
         "TokenEndPoint": "https://auth.wellcomecollection.org/oauth2/token",
