Update pdf and manifest paths to use new nqs

--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/appsettings.Production.json
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/appsettings.Production.json
@@ -46,9 +46,7 @@
         "PortalPageTemplate": "https://portal.dlcs.io/Image.aspx?space={0}&image={1}",
         "PortalBatchTemplate": "https://portal.dlcs.io/Batch.aspx?batch={0}",
         "SkeletonNamedQueryTemplate": "https://dlcs.io/iiif-resource/wellcome/preview/{0}/{1}",
-        "PreventSynchronisation": false,
-        "PdfQueryName": "pdf-item",
-        "PdfQueryType": "sequenceIndex"
+        "PreventSynchronisation": false
     },
     "Storage": {
         "StorageApiTemplate": "https://api.wellcomecollection.org/storage/v1/bags/digitised/{0}",
