--- a/src/Wellcome.Dds/Wellcome.Dds.Server/appsettings.Production.json
+++ b/src/Wellcome.Dds/Wellcome.Dds.Server/appsettings.Production.json
@@ -48,7 +48,7 @@
         "SkeletonNamedQueryTemplate": "https://dlcs.io/iiif-resource/wellcome/preview/{0}/{1}",
         "PreventSynchronisation": false,
         "PdfQueryName": "pdf-item",
-        "PdfQueryType": "sequenceIndex"
+        "PdfQueryType": "identity"
     },
     "Storage": {
         "StorageApiTemplate": "https://api.wellcomecollection.org/storage/v1/bags/digitised/{0}",
