--- a/src/Wellcome.Dds/Wellcome.Dds.Server/appsettings.Staging-Prod.json
+++ b/src/Wellcome.Dds/Wellcome.Dds.Server/appsettings.Staging-Prod.json
@@ -28,7 +28,7 @@
         "SkeletonNamedQueryTemplate": "https://dlcs.io/iiif-resource/wellcome/preview/{0}/{1}",
         "PreventSynchronisation": false,
         "PdfQueryName": "pdf-item",
-        "PdfQueryType": "sequenceIndex"
+        "PdfQueryType": "identity"
     },
     "Dds": {
         "StatusContainer": "wellcomecollection-stage-iiif-presentation",
