--- a/src/Wellcome.Dds/DlcsJobProcessor/appsettings.Staging-Prod.json
+++ b/src/Wellcome.Dds/DlcsJobProcessor/appsettings.Staging-Prod.json
@@ -27,9 +27,7 @@
         "PortalPageTemplate": "https://portal.dlcs.io/Image.aspx?space={0}&image={1}",
         "PortalBatchTemplate": "https://portal.dlcs.io/Batch.aspx?batch={0}",
         "SkeletonNamedQueryTemplate": "https://dlcs.io/iiif-resource/wellcome/preview/{0}/{1}",
-        "PreventSynchronisation": false,
-        "PdfQueryName": "pdf-item",
-        "PdfQueryType": "sequenceIndex"
+        "PreventSynchronisation": false
     },
     "Dds": {
         "StatusContainer": "wellcomecollection-stage-iiif-presentation",
