Tidy appsettings for json

--- a/src/Wellcome.Dds/DlcsJobProcessor/appsettings.Staging-Prod.json
+++ b/src/Wellcome.Dds/DlcsJobProcessor/appsettings.Staging-Prod.json
@@ -18,16 +18,7 @@
         }
     },
     "Dlcs": {
-        "CustomerId": 2,
-        "CustomerName": "Wellcome",
-        "CustomerDefaultSpace": 6,
-        "ApiEntryPoint": "https://api.dlcs.io/",
-        "ResourceEntryPoint": "https://dlcs.io/",
-        "BatchSize": 100,
-        "PortalPageTemplate": "https://portal.dlcs.io/Image.aspx?space={0}&image={1}",
-        "PortalBatchTemplate": "https://portal.dlcs.io/Batch.aspx?batch={0}",
-        "SkeletonNamedQueryTemplate": "https://dlcs.io/iiif-resource/wellcome/preview/{0}/{1}",
-        "PreventSynchronisation": false
+        "CustomerDefaultSpace": 6
     },
     "Dds": {
         "StatusContainer": "wellcomecollection-stage-iiif-presentation",
