--- a/src/Wellcome.Dds/Wellcome.Dds.Server/appsettings.json
+++ b/src/Wellcome.Dds/Wellcome.Dds.Server/appsettings.json
@@ -19,5 +19,17 @@
       "ApplicationName": "Engine"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Dlcs": {
+    "CustomerId": 2,
+    "CustomerName": "Wellcome",
+    "SkeletonNamedPdfTemplate": "https://dlcs.io/pdf/wellcome/pdf/{0}/{1}",
+    "SkeletonNamedQueryTemplate": "https://dlcs.io/iiif-resource/wellcome/preview/{0}/{1}",
+    "PortalPageTemplate": "https://portal.dlcs.io/Image.aspx?space={0}&image={1}",
+    "PortalBatchTemplate": "https://portal.dlcs.io/Batch.aspx?batch={0}",
+    "ApiEntryPoint": "https://api.dlcs.io/",
+    "ResourceEntryPoint": "https://dlcs.io/",
+    "BatchSize": 100,
+    "PreventSynchronisation": false
+  }
 }
