Output PDF path with presentation

--- a/src/Wellcome.Dds/Wellcome.Dds.Server/appsettings.json
+++ b/src/Wellcome.Dds/Wellcome.Dds.Server/appsettings.json
@@ -31,5 +31,8 @@
     "ResourceEntryPoint": "https://dlcs.io/",
     "BatchSize": 100,
     "PreventSynchronisation": false
+  },
+  "Dds": {
+    "ApiWorkTemplate": "https://api.wellcomecollection.org/catalogue/v2/works"
   }
 }
